canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simple-service
spec:
  hosts:
  - simple-service
  http:
  - route:
    - destination:
        host: simple-service
        subset: v1
      weight: 50
    - destination:
        host: simple-service
        subset: v2
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: simple-service
spec:
  host: simple-service
  subsets:
  - name: v1
    labels:
      color: GREEN
  - name: v2
    labels:
      color: RED
