fault-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simple-service
spec:
  hosts:
  - "*"
  gateways:
  - ingress-gateway
  http:
  - fault:
      delay:
        percent: 100
        fixedDelay: 7s
    route:
    - destination:
        host: simple-service
        port:
          number: 8080
