gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: simple-ui
spec:
  hosts:
  - "*"
  gateways:
  - ingress-gateway
  http:
  - route:
    - destination:
        host: simple-ui
        port:
          number: 8080
#    fault:
#      delay:
#        percent: 100
#        fixedDelay: 7s
